# Ludo

./: CMakeLists.txt  Casilla.h  CasillaCasa.cpp  CasillaCasa.h  CasillaComienzo.cpp  CasillaComienzo.h  CasillaDestino.cpp  CasillaDestino.h  CasillaNormal.cpp  CasillaNormal.h  CasillaSegura.cpp  CasillaSegura.h  Dado.h  DadoResultado.h  Ficha.cpp  Ficha.h  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  README.md  Recorrido.cpp  Recorrido.h  Tablero.cpp  Tablero.h  Window.cpp  Window.h  main.cpp
